[gd_scene load_steps=8 format=3 uid="uid://cw0rrywq33yqg"]

[ext_resource type="Script" path="res://src/entities/bubble/next_bubble_chooser.gd" id="1_r10gq"]
[ext_resource type="Material" uid="uid://c8ghpq02up3dc" path="res://assets/materials/bubble.tres" id="2_os28p"]
[ext_resource type="Texture2D" uid="uid://d26mgy1k3p1p5" path="res://assets/texture/bubble/hface.png" id="3_2i5n5"]
[ext_resource type="Script" path="res://src/entities/bubble/sprite_3d.gd" id="4_i1ssf"]
[ext_resource type="Texture2D" uid="uid://bg1yhahpnsam7" path="res://assets/texture/bubble/face.png" id="5_v07y4"]

[sub_resource type="SphereMesh" id="SphereMesh_ruym7"]

[sub_resource type="SphereMesh" id="SphereMesh_ji4eb"]

[node name="NextBubbleChooser" type="Node3D"]
script = ExtResource("1_r10gq")

[node name="CurrentBubble" type="Node3D" parent="."]

[node name="MeshCurrentBubble" type="MeshInstance3D" parent="CurrentBubble"]
mesh = SubResource("SphereMesh_ruym7")
surface_material_override/0 = ExtResource("2_os28p")

[node name="Sprite3D" type="Sprite3D" parent="CurrentBubble/MeshCurrentBubble"]
transform = Transform3D(0.06, 0, 0, 0, 0.06, 0, 0, 0, 0.06, 0, 0, 0)
billboard = 2
shaded = true
texture = ExtResource("3_2i5n5")
script = ExtResource("4_i1ssf")
face1 = ExtResource("3_2i5n5")
face2 = ExtResource("5_v07y4")

[node name="NextBubble" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.6794, 0)

[node name="MeshNextBubble" type="MeshInstance3D" parent="NextBubble"]
mesh = SubResource("SphereMesh_ji4eb")
surface_material_override/0 = ExtResource("2_os28p")
